# apple-store-connect

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json  run.js
python/: pyproject.toml
python/asc_mcp/: __init__.py
src/: tools.rs
