[package]
name = "asc-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for Apple App Store Connect API — Xcode Cloud operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/menot-you/asc-mcp"
keywords = ["mcp", "xcode-cloud", "app-store-connect", "apple", "ci-cd"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
flate2 = "1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "native-tls"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
flate2 = "1"
tokio-test = "0.4"
wiremock = "0.6"
